[package]
name = "piow"
version = "0.1.0"
authors = ["Korbinian Maier <korbinian.maier@posteo.de>"]
edition = "2018"

[dependencies]
# swayipc = "2.7"
swayipc-async = "2.0.0-alpha.2"

tokio = { version = "0.3.2", features = ["rt-multi-thread", "macros"] }
futures-util = "0.3.7"

toml = {"version" = "0.5.3"} #, "features" = ["preserve_order"]}

indexmap = {"version" = "1", "features" = ["serde"]}
serde = "1"
serde_derive = "*"
failure = "0.1"
dirs = "3.0"

docopt = "1"
log = "0.4"
env_logger = "0.8"