[package]
name = "piow"
version = "0.4.1"
authors = ["Korbinian Maier <korbinian.maier@posteo.de>"]
edition = "2018"
description = "Put Icons On your sway Workspaces"
homepage = "https://github.com/KuabeM/piow"
keywords = ["sway", "wayland", "workspaces"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/KuabeM/piow"

[dependencies]
# Async connection to sway
futures-util = "0.3"
swayipc-async = "2.0.0"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
# Config
dirs = "4"
indexmap = {"version" = "1", "features" = ["serde"]}
serde = "1"
serde_derive = "1"
toml = "0.5"
# Utils
docopt = "1"
env_logger = "0.9"
syslog = "6"
anyhow = "1"
log = "0.4"

[profile.release]
lto = true
